# PC-TRT

./: LICENSE  README.md
ReTest/: 0001-add-klee_path_trigger-and-klee_path_conditional_exit.patch  CMakeLists.txt  README in Chinese.md  README.md
ReTest/doc/: 代码介绍.md
ReTest/scripts/: clean.py  ir2png.py  klee_ir.py
ReTest/src/: main.cpp
ReTest/src/dynamic/: instrument.h  reuseengine.h  testengine.h
ReTest/src/generate/: drivergenerator.h  pathinstrument.h  testgenerator.h
ReTest/src/static/: cfg.h  testcase.h
ReTest/src/utils/: common.h  config.h
ReTest/test/: test.cpp  test_reused.json
retest/: CMakeLists.txt
retest/scripts/: klee_ir.py
retest/src/: main.cpp
retest/src/dynamic/: instrument.h  reuseengine.h  testengine.h
retest/src/generate/: drivergenerator.h  kleedrivergenerator.h  pathinstrument.h  testgenerator.h
retest/src/static/: cfg.h  testcase.h
retest/src/utils/: common.h  config.h  utils.h
retest/test/: reverse.c  reverse_old.c  test.cpp  test_suite.json  test_suite_generated.json
